# HIT-DatabaseSystem

./: .gitignore  README.md
homework/hw1/: hw1.md
homework/hw2/: create.sql  query.sql  query_testai.sql
homework/hw3/: hw3.md
homework/hw4/: hw4.md
homework/hw5/: hw5.md
homework/hw6/: hw6.md
lab/Flight/: CMakeLists.txt  Passenger.cpp  Passenger.h  airport.cpp  airport.h  airport.ui  booking.cpp  booking.h  booking.ui  flight.cpp  flight.h  flight.ui  main.cpp  mysql.txt  parent.cpp  parent.h  parent.ui  passenger.ui  sql.cpp  sql.h  ui_airport.h  ui_booking.h  ui_flight.h  ui_parent.h  ui_passenger.h
lab/QueryOptimize/: CMakeLists.txt  main.cpp  tree.cpp  tree.h
lab/QueryProcessing/: CMakeLists.txt  blkio.cpp  blkio.h  extmem.cpp  extmem.h  file.h  genData.py  hashJoin.cpp  join.h  main.cpp  mergeSort.cpp  mergeSort.h  nestedLoopJoin.cpp  project.cpp  project.h  select.cpp  select.h  sortMergeJoin.cpp
lab/QueryProcessing/data/: 0.blk  1.blk  10.blk  11.blk  12.blk  13.blk  14.blk  15.blk  16.blk  17.blk  18.blk  19.blk  2.blk  20.blk  21.blk  22.blk  23.blk  24.blk  25.blk  26.blk  27.blk  28.blk  29.blk  3.blk  30.blk  3000.blk  3001.blk  3002.blk  3003.blk  3004.blk  3005.blk  3006.blk  3007.blk  3008.blk  3009.blk  3010.blk  3011.blk  3012.blk  3013.blk  3014.blk  (+69 more)
